kubernetes/history.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: history
  labels:
    app: history
spec:
  replicas: 1
  selector:
    matchLabels:
      app: history
  template:
    metadata:
      labels:
        app: history
    spec:
      containers:
        - name: history
          image: marinastancu/history:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: history-service
spec:
  selector:
    app: history
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
