kubernetes/songs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: songs
  labels:
    app: songs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: songs
  template:
    metadata:
      labels:
        app: songs
    spec:
      containers:
        - name: songs
          image: marinastancu/songs:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: songs
spec:
  selector:
    app: songs
  ports:
    - protocol: TCP
      port: 8080
